[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (>=1.26.4,<2.0.0)",
    "scipy (==1.12.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (==1.5.3)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "chaospy (==4.3.2)",
    "torch (==2.2.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "torchtyping (>=0.1.5,<0.2.0)",
    "torchgfn (>=1.2.1,<2.0.0)",
    "networkx (>=3.5,<4.0)",
    "transformers (>=4.53.0,<5.0.0)",
    "pyro-ppl (>=1.9.1,<2.0.0)",
    "torch-geometric (>=2.6.1,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "gpy (>=1.13.2,<2.0.0)",
    "easyvvuq (>=1.3,<2.0)",    
    "ray[default] (>=2.48.0,<3.0.0)",    
    "hydra-core (==1.1.0)",    
    "omegaconf (==2.1.2)",    
    "submitit (>=1.5.3,<2.0.0)",    
    "hydra-submitit-launcher (>=1.2.0,<2.0.0)"    
]

[tool.poetry]
package-mode=false



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
